# pretong-workshop-test

./: .condarc  .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_SPEC.md  README.md  RELEASE_NOTES.md  bootstrap.sh  environment.yml  pyproject.toml
.course/: assignment_contract.json  local_check.py  protected_paths.txt
.github/workflows/: feedback.yml
config/: train.toml
cpp/include/: fastops.h
cpp/src/: fastops.cpp
hybridml/: checkpoint.py  data.py  environment.py  fingerprint.py  model.py  native.py  train.py
scripts/: build.sh  check.sh  doctor.sh  train.sh
tests/public/: test_checkpoint_schema.py  test_environment.py  test_native.py
